Fixed Naming, Immutability, and some Layout issues
Renamed MakeColumnsFromArray to NamesColumns.
Removed prop from NamesColumns. Decided to stick with using
challengers import specifically.
Fixed some immutability concerns inside NamesColumns
with content.
Fixed layout so that the ordered lists have only list items as
immediate children.
Set a minimum width for each column.

--- a/pages/styles/challenge.module.css
+++ b/pages/styles/challenge.module.css
@@ -23,12 +23,14 @@
   text-align: center;
 }
 
-.Challenge .challengerList {
-  width: 90vw;
-  padding: 0 10px;
+.Challenge .challengerListColumn {
+  padding: 0;
+  align-self: flex-start;
+  flex-basis: 225px;
+  list-style-position: inside;
 }
 
-.Challenge .challengerListColumn {
-  align-self: flex-start;
-  margin: 25px;
+.Challenge .challengerListContainer div {
+  width: 99vw;
+  margin: 0;
 }
